<resources>
    <string name="app_name">EduInvest</string>
    <string name="todo">TODO</string>
    <string name="default_web_client_id">657284319471-5q20dg63aie1iaml8vncbpo8ee0i29dq.apps.googleusercontent.com</string>

    <string name="more">Thêm</string>
    <string name="home">Trang Chủ</string>
    <string name="enrollment">Tuyển Sinh</string>
    <string name="contanct">Liên Hệ Hợp Tác</string>
    <string name="share">Chia Sẻ Ứng Dụng</string>
    <string name="donate">Ủng Hộ Nhà Phát Triển</string>
    <string name="rate">Đánh Giá Ứng Dụng</string>
    <string name="setting">Cài đặt</string>
    <string name="relax">Thư Giãn</string>
    <string name="groupstudy">Nhóm Học Tập</string>
    <string name="shopping">Mua Sắm</string>
    <string name="ungho">Người dân chung tay xóa nhà tạm, nhà dột nát trên phạm vi toàn quốc bằng cách chuyển khoản đến Quỹ Vì người nghèo Trung ương số tài khoản:\n - 111135888888 tại Vietinbank.\n - 9999999999999 tại Vietcombank.\n - 1303999789999 tại Agribank.\n - 8631088888 tại BIDV.\n - 2025 tại MBBank\n - 3761.0.9054386.91046 tại Kho bạc Nhà nước Hoàn Kiếm, Hà Nội.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage">Manage</string>
    <string name="time">Time</string>
    <string name="time_icon">Time Icon</string>
    <string name="title_news">Title News</string>
    <string name="trang_c_nh_n">Trang cá nhân</string>
    <string name="vi_t_nam">Việt Nam</string>
    <string name="th_ng_tin_g_i_vay">Thông Tin Gói Vay</string>
    <string name="t_n_ng_n_h_ng">Tên Ngân Hàng</string>
    <string name="t_n_g_i_vay">Tên Gói Vay</string>
    <string name="l_i_xu_t_cho_vay">Lãi Xuất Cho Vay</string>
    <string name="th_i_gian_duy_t">Thời Gian Duyệt</string>
    <string name="li_n_h_gi_i_p">Liên Hệ Giải Đáp</string>
    <string name="ng_k_h_s">Đăng Ký Hồ Sơ</string>
    <string name="h_n_m_c_cho_vay">Hạn Mức Cho Vay</string>
    <string name="lo_i_ti_n_cho_vay">Loại Tiền Cho Vay</string>
    <string name="th_i_gian_cho_vay">Thời Gian Cho Vay</string>
    <string name="m_t">Mô Tả</string>
    <string name="i_u_ki_n_cho_vay">Điều Kiện Cho Vay</string>
    <string name="qu_n_l_m">Quản lý mã</string>
    <string name="c_c_m_qr_c_a_b_n">Các mã QR của bạn</string>
    <string name="eduinvest_priority">Eduinvest Priority</string>
    <string name="th_nh_vi_n">Thành viên</string>
    <string name="u_i">Ưu đãi</string>
    <string name="q_a_c_a_t_i">Qùa của tôi</string>
    <string name="_1">1</string>
    <string name="xu_t_ch_l_y">Xu tích lũy</string>
</resources>