<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemNews"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/dp_5"
    android:layout_marginBottom="@dimen/dp_5"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Thay ImageView bằng ShapeableImageView -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageNews"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/newsContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/imageNews"
            app:layout_constraintTop_toTopOf="@id/imageNews"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/titleNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:fontFamily="@font/font_inter"
                android:textColor="@color/black"
                android:text="@string/title_news"/>

            <LinearLayout
                android:id="@+id/newsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/icon_baseline_access_time_24"
                    android:contentDescription="@string/time_icon"
                    app:tint="@color/black"/>

                <TextView
                    android:id="@+id/timeNews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:fontFamily="@font/font_inter"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/red"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/black" />
</LinearLayout>
