<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".loanactivities.DetailLoanActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:context=".bankActivity.DetailBankActivity"
        tools:ignore="ScrollViewSize">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/th_ng_tin_g_i_vay"
            android:gravity="center"
            android:textColor="@color/black"
            tools:ignore="TextViewEdits" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/t_n_ng_n_h_ng"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            tools:ignore="TextViewEdits" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_txt"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:id="@+id/detailNameBank"
            android:autofillHints="username"
            android:inputType="text"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/t_n_g_i_vay"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:id="@+id/detailTitleBank"
            android:autofillHints="username"
            android:inputType="text"
            android:gravity="start|center_vertical"
            android:background="@drawable/bg_txt"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/l_i_xu_t_cho_vay"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailRateBank"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:gravity="start|center_vertical"
            android:background="@drawable/bg_txt"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/th_i_gian_duy_t"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailBrowseBank"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:gravity="start|center_vertical"
            android:background="@drawable/bg_txt"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/th_i_gian_cho_vay"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailLoanPeriodBank"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:gravity="start|center_vertical"
            android:background="@drawable/bg_txt"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/h_n_m_c_cho_vay"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailLimitBank"
            android:autofillHints="username"
            android:background="@drawable/bg_txt"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/lo_i_ti_n_cho_vay"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailMoneyBank"
            android:autofillHints="username"
            android:inputType="text"
            android:background="@drawable/bg_txt"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/m_t"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailDescribeBank"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:background="@drawable/bg_txt"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/i_u_ki_n_cho_vay"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
                   tools:ignore="TextViewEdits"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailCosditionBank"
            android:autofillHints="username"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:background="@drawable/bg_txt"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,TextViewEdits"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/ng_k_h_s"
                android:layout_weight="1"
                app:cornerRadius="12dp"
                app:backgroundTint="@color/blue"
                android:textColor="@color/white"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/li_n_h_gi_i_p"
                android:layout_weight="1"
                app:cornerRadius="12dp"
                app:backgroundTint="@color/blue"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>